--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ body{
 .card.square{ height:180px; }
 .card.wide{ height:160px; }
 
+/* VIDEO CARD */
+.video-card video{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  border-radius:22px;
+  display:block;
+}
 .thumb{
   width:100%;
   height:100%;
