--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body{
   background-size:cover;
   background-position:center;
   margin-bottom:18px;
+  
+  box-shadow:
+    0 0 8px rgba(255,255,255,0.35),
+    0 0 20px rgba(255,255,255,0.15);
 }
 
 .name{
