--- a/style.css
+++ b/style.css
@@ -29,18 +29,26 @@ body{
 }
 
 .profile .avatar{
+  position: relative;
   width:160px;
   height:160px;
   border-radius:50%;
-  background:#ddd;
-  background-image: url("assets/profile.jpg");
+  background-image:url("assets/profile.jpg");
   background-size:cover;
   background-position:center;
   margin-bottom:18px;
-  
+  z-index:1;
+}
+.profile .avatar::after{
+  content:"";
+  position:absolute;
+  inset:-6px;
+  border-radius:50%;
   box-shadow:
-    0 0 8px rgba(255,255,255,0.35),
-    0 0 20px rgba(255,255,255,0.15);
+    0 0 12px rgba(255,255,255,0.35),
+    0 0 32px rgba(255,255,255,0.2),
+    0 0 64px rgba(255,255,255,0.1);
+  z-index:-1;
 }
 
 .name{
