--- a/style.css
+++ b/style.css
@@ -45,10 +45,15 @@ body{
   position:absolute;
   inset:-14px;
   border-radius:50%;
-  background:rgba(255,255,255,1);
-  filter: blur(26px);
-  z-index:-1;
-  opacity:0.9;
+  background: radial-gradient(
+  circle,
+  rgba(255,255,255,0.9) 0%,
+  rgba(255,255,255,0.6) 40%,
+  rgba(255,255,255,0.25) 60%,
+  rgba(255,255,255,0) 70%
+);
+filter: blur(18px);
+opacity:1;
 }
 
 .name{
