--- a/style.css
+++ b/style.css
@@ -13,12 +13,16 @@ body{
 }
 
 .wrap{
+  max-width:1100px;
+  margin:0 auto;
   width:100%;
   min-height:100vh;
+
   display:grid;
-  grid-template-columns: 420px 1fr;
-  gap:40px;
-  padding:40px 60px;
+  grid-template-columns:360px 1fr;
+  gap:32px;
+
+  padding:32px 20px;
 }
 
 /* LEFT */
