--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 }
 
 body{
-  background:#ffffff;
-  color:#111;
+  background:#000;
+  color:#fff;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 .wrap{
