--- a/style.css
+++ b/style.css
@@ -98,6 +98,12 @@ body{
 .card.square{ height:180px; }
 .card.wide{ height:160px; }
 
+.card.tall.video-card{
+  aspect-ratio: 9 / 16;
+  height: auto;
+  background:#000;
+}
+
 /* VIDEO CARD */
 .video-card video{
   width:100%;
